--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 #Autosave files
 *~
-Temp/
+Temp/*
 *.ddl
 *.sln
 /Library/*
@@ -244,7 +244,6 @@ Library/ScriptAssemblies/Assembly-CSharp.dll
 Library/ScriptAssemblies/Assembly-CSharp.dll.mdb
 Library/metadata/40/40e3eb9774c48eb4295d687b7b198b6b
 *.dwlt
-*.dll
 *.mdb
 Library/CurrentLayout.dwlt
 *.exr
